--- a/views/default/index.handlebars
+++ b/views/default/index.handlebars
@@ -115,7 +115,8 @@
             <i class="fa fa-fw fa-link"></i>
             <span class="nav-link-text">Link</span>
           </a>
-        </li>
+        </li>blog
+        
       </ul>
       <ul class="navbar-nav sidenav-toggler">
         <li class="nav-item">
